--- a/ExpressJS/Templates/views/index.hbs
+++ b/ExpressJS/Templates/views/index.hbs
@@ -13,28 +13,8 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-
-    <!-- Navbar area -->
-    <nav class="navbar">
-      <div class="navbar-container container">
-        <input type="checkbox" />
-        <div class="hamburger-lines">
-          <span class="line line1"></span>
-          <span class="line line2"></span>
-          <span class="line line3"></span>
-        </div>
-
-        <ul class="menu-items">
-          <li><a href="#showcase">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#food">Category</a></li>
-          <li><a href="#food-menu">Menu</a></li>
-          <li><a href="#testimonials">Testemonial</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-        <h1 class="logo">{{logoName}}</h1>
-      </div>
-    </nav>
+    {{!-- Add Header as dynamic way --}}
+    {{>header}}
 
     <!-- Showcase Section -->
     <section class="showcase-area" id="showcase">
@@ -274,9 +254,7 @@
     </section>
 
     <!-- #### Footer HTML ########## -->
-    <footer class="footer">
-      <h2>Restraunt website &copy; all rights reserved</h2>
-    </footer>
+    {{>footer}}
 
     <!-- ############ Javascript Code for Smoth Scrolling ################## -->
     <script
