--- a/ExpressJS/public/style.css
+++ b/ExpressJS/public/style.css
@@ -1,593 +1,600 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap');
-*, *::after, *::before {
-    box-sizing: border-box;
-    padding: 0;
-    margin: auto;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap");
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+  padding: 0;
+  margin: auto;
 }
 
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 body {
-    font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
-
 
 /* ######## navbar styling ###### */
 .container {
-    max-width: 1200px;
-    width: 90%;
-    margin:auto;
+  max-width: 1200px;
+  width: 90%;
+  margin: auto;
 }
 
 .btn {
-    display: inline-block;
-    padding: 1em 2.5em;
-    text-decoration: none;
-    border-radius: 50px;
-    cursor: pointer;    
-    outline: none;
-    margin-top: 1em;
-    text-transform: uppercase;
-    font-weight: 500;
+  display: inline-block;
+  padding: 1em 2.5em;
+  text-decoration: none;
+  border-radius: 50px;
+  cursor: pointer;
+  outline: none;
+  margin-top: 1em;
+  text-transform: uppercase;
+  font-weight: 500;
 }
 
 .btn-primary {
-    color: #fff;
-    background: #117964;
+  color: #fff;
+  background: #117964;
 }
 
 .btn-primary:hover {
-    background-color: #053b31;
+  background-color: #053b31;
 }
 
 /* #############  Navbar styling ####### */
 
 /* for Desktop Mode */
 
-.navbar input[type='checkbox'],
+.navbar input[type="checkbox"],
 .navbar .hambuger-lines {
-    display: none;
+  display: none;
 }
 
 .navbar {
-    box-shadow: 0px 5px 10px 0px #aaa;
-    position: fixed;
-    width: 100%;
-    background-color: #fff;
-    color: #000;
-    opacity: 0.85;
-    z-index: 999;
+  box-shadow: 0px 5px 10px 0px #aaa;
+  position: fixed;
+  width: 100%;
+  background-color: #fff;
+  color: #000;
+  opacity: 0.85;
+  z-index: 999;
 }
 
 .navbar-container {
-    display: flex;
-    justify-content: space-between;
-    height: 64px;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  height: 64px;
+  align-items: center;
 }
 
 .menu-items {
-    order: 2;
-    display: flex;
+  order: 2;
+  display: flex;
 }
 
 .menu-items li {
-    list-style: none;
-    font-size: 1.8rem;
-    margin-left: 1.5rem;
+  list-style: none;
+  font-size: 1.8rem;
+  margin-left: 1.5rem;
 }
 
-.menu-items  a {
-    color: #444;
-    font-weight: 500;
-    text-decoration: none;
-    transition: color 0.3s ease-in-out  ;
-    
+.menu-items a {
+  color: #444;
+  font-weight: 500;
+  text-decoration: none;
+  transition: color 0.3s ease-in-out;
 }
 
 .navbar a:hover {
-    color: #117964;
+  color: #117964;
 }
+
 .logo {
-    order: 1;
-    font-size: 3rem;
-    margin-left: -16rem;
+  order: 1;
+  font-size: 3rem;
+  margin-left: -16rem;
+  transition: all 0.3s ease-in;
+}
+
+.logo:hover {
+  transform: scale(0.9);
+  cursor: pointer;
 }
 
 /* ###### showcase styling ###### */
 .showcase-area {
-    display: flex;
-    height: 50vh;
-    background-size: cover;
-    background-position: centers;
-    background-repeat: no-repeat;
-    background:linear-gradient(rgb(240, 240, 240, 0.144), rgb(255, 255, 255, .336)) ,url("./Img/header-image2.jpg");
-    
+  display: flex;
+  height: 50vh;
+  background-size: cover;
+  background-position: centers;
+  background-repeat: no-repeat;
+  background: linear-gradient(
+      rgb(240, 240, 240, 0.144),
+      rgb(255, 255, 255, 0.336)
+    ),
+    url("./Img/header-image2.jpg");
 }
 
 .showcase-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.6rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.6rem;
 }
 
 .main-title {
-    text-transform: uppercase;
+  text-transform: uppercase;
 }
 
 /* ###### About Us Styling ###### */
 #about {
-    padding: 50px 0;
-    background: #F5F5F5;
+  padding: 50px 0;
+  background: #f5f5f5;
 }
 .about-wrapper {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 #about h2 {
-    font-size: 3.2rem;
+  font-size: 3.2rem;
 }
 
 #about p {
-    font-size: 1.6rem;
-    color: #555;
+  font-size: 1.6rem;
+  color: #555;
 }
 #about.small {
-    font-size: 1.6rem;
-    color: #666;
-    font-weight: 600;
+  font-size: 1.6rem;
+  color: #666;
+  font-weight: 600;
 }
 .about-img {
-    flex: 1 1 400px;
-    padding: 30px;
-    transform: translateX(150%);
-    animation: about-img-animation 0.5s ease-in-out forwards;
+  flex: 1 1 400px;
+  padding: 30px;
+  transform: translateX(150%);
+  animation: about-img-animation 0.5s ease-in-out forwards;
 }
 
 @keyframes about-img-animation {
-    100% {
-        transform: translate(0);
-    }
+  100% {
+    transform: translate(0);
+  }
 }
 
 .about-text {
-    flex: 1 1 400px;
-    padding: 30px;
-    margin: auto;
-    transform: translateX(-150%);
-    animation: about-text-animation 0.5s ease-in-out forwards;
+  flex: 1 1 400px;
+  padding: 30px;
+  margin: auto;
+  transform: translateX(-150%);
+  animation: about-text-animation 0.5s ease-in-out forwards;
 }
 
 @keyframes about-text-animation {
-    100% {
-        transform: translate(0);
-    }
+  100% {
+    transform: translate(0);
+  }
 }
 
 .about-img img {
-    display: block;
-    height: 400px;
-    max-width: 100%;
-    margin: auto;
-    object-fit: cover;
-    object-position: center;
+  display: block;
+  height: 400px;
+  max-width: 100%;
+  margin: auto;
+  object-fit: cover;
+  object-position: center;
 }
-
 
 /* ###### Types of food styling ##### */
 
 #food {
-    padding: 5rem 0 10rem 0;
+  padding: 5rem 0 10rem 0;
 }
 
 #food h2 {
-    text-align: center;
-    font-size: 3rem;
-    font-weight: 400;
-    text-transform: uppercase;
-    color: #555;
-    margin-bottom: 45px;
+  text-align: center;
+  font-size: 3rem;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: #555;
+  margin-bottom: 45px;
 }
 
 .food-container {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
-.food-container img  {
-    display: block;
-    width: 100%;
-    max-height: 300px;
-    margin: auto;
-    object-fit: cover;
-    object-position: center;
+.food-container img {
+  display: block;
+  width: 100%;
+  max-height: 300px;
+  margin: auto;
+  object-fit: cover;
+  object-position: center;
 }
 
 .img-container {
-    margin: 0 1rem;
-    position: relative;
+  margin: 0 1rem;
+  position: relative;
 }
 
 .img-content {
-    position: absolute;
-    top: 70%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    opacity: 0;
-    z-index: 2;
-    text-align: center;
-    transition: all 0.3s ease-in-out 0.1s;
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  z-index: 2;
+  text-align: center;
+  transition: all 0.3s ease-in-out 0.1s;
 }
 
 .img-content h3 {
-    color: #fff;
-    font-size: 3rem;
+  color: #fff;
+  font-size: 3rem;
 }
 
 .img-content a {
-    font-size: 1.2rem;
+  font-size: 1.2rem;
 }
 
 .img-container::after {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgb(0, 0, 0, 0.871);
-    /* opacity: 0; */
-    z-index: 1;
-    transform: scaleY(0);
-    transform-origin: 100% 100%;
-    transition: all 0.3s ease-in-out;
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgb(0, 0, 0, 0.871);
+  /* opacity: 0; */
+  z-index: 1;
+  transform: scaleY(0);
+  transform-origin: 100% 100%;
+  transition: all 0.3s ease-in-out;
 }
 
 .img-container:hover::after {
-    opacity: 1;
-    transform: scaleY(1);
+  opacity: 1;
+  transform: scaleY(1);
 }
 
 .img-container:hover .img-content {
-    opacity: 1;
-    top: 40%;
+  opacity: 1;
+  top: 40%;
 }
 
 /* ####### Food Menu Item Styling ############### */
 .food-menu-heading {
-    font-size: 4rem;
-    color: #666;
-    text-align: center;
-    font-weight: 400;
-
+  font-size: 4rem;
+  color: #666;
+  text-align: center;
+  font-weight: 400;
 }
 
 .food-menu-container {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 50px 0 30px 0;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 50px 0 30px 0;
 }
 
 .food-menu-container img {
-    width: 250px;
-    height: 250px;
-    display: block;
-    border-radius: 50%;
-    object-fit: cover;
+  width: 250px;
+  height: 250px;
+  display: block;
+  border-radius: 50%;
+  object-fit: cover;
 }
 .food-menu-item {
-    display: flex;
-    justify-content: space-evenly;
-    flex: 1 1 600px;
-    margin-bottom: 3rem;
+  display: flex;
+  justify-content: space-evenly;
+  flex: 1 1 600px;
+  margin-bottom: 3rem;
 }
 
 .food-description {
-    margin: auto 1.5rem;
+  margin: auto 1.5rem;
 }
 
 .food-title {
-    font-size: 2.5rem;
-    font-weight: 400;
-    color: #444;
+  font-size: 2.5rem;
+  font-weight: 400;
+  color: #444;
 }
 
 .food-description p {
-    font-weight: 500;
-    font-size: 1.5rem;
-    color: #555;
+  font-weight: 500;
+  font-size: 1.5rem;
+  color: #555;
 }
 
 .food-description .food-price {
-    color: #117964;
-    font-weight: 700;
+  color: #117964;
+  font-weight: 700;
 }
 
 /* ########### Testemonial Styling ############# */
 #testimonials {
-    padding: 5rem 0rem;
-    background-color: rgb(243, 243, 243);
+  padding: 5rem 0rem;
+  background-color: rgb(243, 243, 243);
 }
 .testimonial-title {
-    color: #555;
-    font-size: 3rem;
-    font-weight: 400;
-    text-align: center;
+  color: #555;
+  font-size: 3rem;
+  font-weight: 400;
+  text-align: center;
 }
 
 .testimonial-container {
-    display: flex;
-    justify-content: space-between;
-    font-size: 1.6rem;
-    padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.6rem;
+  padding: 1rem;
 }
 
 .testimonial-box .checked {
-    color: #ff9529;
+  color: #ff9529;
 }
 
 .testimonial-box .testimonial-text {
-    margin: 1rem 0;
-    color: #444;
+  margin: 1rem 0;
+  color: #444;
 }
 
 .testimonial-box {
-    text-align: center;
-    padding: 1rem;
+  text-align: center;
+  padding: 1rem;
 }
 
-.customer-photo img{
-    display: block;
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-    object-position: center;
-    border-radius: 50%;
-    margin: auto;
+.customer-photo img {
+  display: block;
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 50%;
+  margin: auto;
 }
 
 /* ############### Styling Of Contact Us Page ################## */
 
 #contact {
-    padding: 5rem 0;
-    background-color: rgb(226, 226, 226);
+  padding: 5rem 0;
+  background-color: rgb(226, 226, 226);
 }
 
 .contact-container {
-    display: flex;
-    background-color: #fff;
+  display: flex;
+  background-color: #fff;
 }
 
 .contact-image {
-    width: 50%;
+  width: 50%;
 }
 
 .contact-image img {
-    display: block;
-    object-fit: cover;
-    object-position: center;
-    height: 400px;
-    width: 100%;
+  display: block;
+  object-fit: cover;
+  object-position: center;
+  height: 400px;
+  width: 100%;
 }
 
 .form-container {
-    padding: 1rem;
-    width: 50%;
-    margin: auto;
+  padding: 1rem;
+  width: 50%;
+  margin: auto;
 }
 
 .form-container input {
-    display: block;
-    width: 100%;
-    border: none;
-    border-bottom: 2px solid #ddd;
-    padding: 1rem 0;
-    box-shadow: none;
-    outline: none;
-    margin-bottom: 1rem;
-    color: #444;
-    font-weight: 500;
+  display: block;
+  width: 100%;
+  border: none;
+  border-bottom: 2px solid #ddd;
+  padding: 1rem 0;
+  box-shadow: none;
+  outline: none;
+  margin-bottom: 1rem;
+  color: #444;
+  font-weight: 500;
 }
 
 .form-container textarea {
-    display: block;
-    width: 100%;
-    border: none;
-    border-bottom: 2px solid #ddd;
-    padding: 1ren 0;
+  display: block;
+  width: 100%;
+  border: none;
+  border-bottom: 2px solid #ddd;
+  padding: 1ren 0;
 }
 
 .form-container h2 {
-    font-size: 3rem;
-    font-weight: 400;
-    margin-bottom:1rem;
-    color: #444;
+  font-size: 3rem;
+  font-weight: 400;
+  margin-bottom: 1rem;
+  color: #444;
 }
 
 .form-container a {
-    font-size: 1.2rem;
+  font-size: 1.2rem;
 }
 
 /* ############ Footer styling ######### */
 .footer {
-    text-align: center;
-    font-size: 1rem;
-    padding: 2rem;
-    font-weight: 500;
-    color: #fff;
-    background-color: rgb(65,65, 65);
+  text-align: center;
+  font-size: 1rem;
+  padding: 2rem;
+  font-weight: 500;
+  color: #fff;
+  background-color: rgb(65, 65, 65);
 }
 
-/* ################## Media Quireis start from here ##################### */  
+/* ################## Media Quireis start from here ##################### */
 /* Desktop First approach */
 @media (max-width: 768px) {
-    .navbar {
-        opacity: 0.95;
-    }
+  .navbar {
+    opacity: 0.95;
+  }
 
-    .navbar-container input[type='checkbox'],
-    .navbar-container .hambuger-lines {
-        display: block;
-    }
+  .navbar-container input[type="checkbox"],
+  .navbar-container .hambuger-lines {
+    display: block;
+  }
 
-    .navbar-container {
-        display: block;
-        position:relative;
-        height: 64px;
-    }
+  .navbar-container {
+    display: block;
+    position: relative;
+    height: 64px;
+  }
 
-    .navbar-container input[type='checkbox'] {
-        position: absolute;
-        display: block;
-        height: 32px;
-        width: 20px;
-        top: 20px;
-        left: 20px; 
-        z-index: 5;   
-        opacity: 0;
-    }
+  .navbar-container input[type="checkbox"] {
+    position: absolute;
+    display: block;
+    height: 32px;
+    width: 20px;
+    top: 20px;
+    left: 20px;
+    z-index: 5;
+    opacity: 0;
+  }
 
-    .navbar-container .hambuger-lines {
-        display: block;
-        height: 32px;
-        width: 40px;
-        position: absolute;
-        top: 20px;
-        left: 20px;
-        z-index: 2;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
+  .navbar-container .hambuger-lines {
+    display: block;
+    height: 32px;
+    width: 40px;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 
-    .navbar-container .hambuger-lines .line {
-        display: block;
-        height: 4px;
-        width: 100%;
-        border-radius: 10px;
-        background: #333333;
-    }
+  .navbar-container .hambuger-lines .line {
+    display: block;
+    height: 4px;
+    width: 100%;
+    border-radius: 10px;
+    background: #333333;
+  }
 
-    .navbar-container .hambuger-lines .line1 {
-        transform: 0% 0%;
-        transition: transform 0.4s ease-in-out;
-    }
-    .navbar-container .hambuger-lines .line2 {
-        transition: transform 0.4s ease-in-out;
-    }
+  .navbar-container .hambuger-lines .line1 {
+    transform: 0% 0%;
+    transition: transform 0.4s ease-in-out;
+  }
+  .navbar-container .hambuger-lines .line2 {
+    transition: transform 0.4s ease-in-out;
+  }
 
-    .navbar-container .hambuger-lines .line3 {
-        transform: 0% 100%;
-        transition: transform 0.4s ease-in-out;
-    }
+  .navbar-container .hambuger-lines .line3 {
+    transform: 0% 100%;
+    transition: transform 0.4s ease-in-out;
+  }
 
-    .navbar .menu-items {
-        padding-top: 100px;
-        height: 100vh;
-        background: #fff;
-        transform: translateX(-150%);
-        max-width: 300px;
-        display: flex;
-        flex-direction: column;
-        margin-left: -40px;
-        padding-left: 50px;
-        transition: transform 0.5s ease-in-out;
-        box-shadow: 5px 0px 10px 0px #aaa;
-    }
+  .navbar .menu-items {
+    padding-top: 100px;
+    height: 100vh;
+    background: #fff;
+    transform: translateX(-150%);
+    max-width: 300px;
+    display: flex;
+    flex-direction: column;
+    margin-left: -40px;
+    padding-left: 50px;
+    transition: transform 0.5s ease-in-out;
+    box-shadow: 5px 0px 10px 0px #aaa;
+  }
 
-    .navbar .menu-items li {
-        margin-bottom: 3rem;
-        font-size: 2rem;
-        font-weight: 500;
+  .navbar .menu-items li {
+    margin-bottom: 3rem;
+    font-size: 2rem;
+    font-weight: 500;
+  }
 
-    }
+  .logo {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 3rem;
+  }
 
-    .logo {
-        position: absolute;
-        top: 10px;
-        right: 15px;
-        font-size: 3rem;
-    }
+  .navbar-container input[type="checkbox"]:checked ~ .menu-items {
+    transform: translateX(0);
+  }
 
-    .navbar-container input[type='checkbox']:checked ~ .menu-items {
-        transform: translateX(0);
-    }
+  .navbar-container input[type="checkbox"]:checked ~ .hambuger-lines .line1 {
+    transform: rotate(45deg);
+  }
 
-    .navbar-container input[type='checkbox']:checked ~ .hambuger-lines .line1 {
-        transform: rotate(45deg);
-    }
+  .navbar-container input[type="checkbox"]:checked ~ .hambuger-lines .line2 {
+    transform: scaleY(0);
+  }
 
-    .navbar-container input[type='checkbox']:checked ~ .hambuger-lines .line2 {
-        transform: scaleY(0);
-    }
+  .navbar-container input[type="checkbox"]:checked ~ .hambuger-lines .line3 {
+    transform: rotate(-45deg);
+  }
 
-    .navbar-container input[type='checkbox']:checked ~ .hambuger-lines .line3 {
-        transform: rotate(-45deg);
-    }
+  /* ################## Food Category ######################### */
 
-    /* ################## Food Category ######################### */
+  .food-container {
+    flex-direction: column;
+    align-items: stretch;
+  }
 
-    .food-container {
-        flex-direction: column;
-        align-items: stretch;
-    }
+  .food-type:not(:last-child) {
+    margin-bottom: 3rem;
+  }
 
-    .food-type:not(:last-child) {
-        margin-bottom: 3rem;
-    }
+  .food-type {
+    box-shadow: 5px 5px 10px 0px #aaa;
+  }
 
-    .food-type {
-        box-shadow: 5px 5px 10px 0px #aaa;
-    }
-
-    .img-container {
-        margin: 0;
-    }
+  .img-container {
+    margin: 0;
+  }
 }
 
 /* ################# for small styling #################### */
 @media (max-width: 500px) {
-    html {
-        font-size: 50%;
-    }
+  html {
+    font-size: 50%;
+  }
 
-    .testimonial-container {
-        flex-direction: column;
-        text-align: center;
-    }
+  .testimonial-container {
+    flex-direction: column;
+    text-align: center;
+  }
 
-    .food-container img {
-        margin:auto;
-    }
+  .food-container img {
+    margin: auto;
+  }
 
-    .food-menu-item {
-        flex-direction: column;
-        text-align: center;
-    }
+  .food-menu-item {
+    flex-direction: column;
+    text-align: center;
+  }
 
-    .form-container {
-        width: 90%;
-    }
+  .form-container {
+    width: 90%;
+  }
 
-    .contact-container {
-        display: flex;
-        flex-direction: column;
-    }
+  .contact-container {
+    display: flex;
+    flex-direction: column;
+  }
 
-    .contact-image {
-        width: 90%;
-        margin: 3rem auto;
-    }
+  .contact-image {
+    width: 90%;
+    margin: 3rem auto;
+  }
 }
 
 /* ################### Landscape Mode ############################# */
 @media (orientation: Landscape) and (max-height: 500px) {
-    .showcase-area {
-        height: 50vmax;
-    }
+  .showcase-area {
+    height: 50vmax;
+  }
 }
