--- a/ExpressJS/public/style.css
+++ b/ExpressJS/public/style.css
@@ -42,6 +42,14 @@ body {
   background-color: #053b31;
 }
 
+/* Error message */
+#error {
+  text-align: center;
+  margin-top: 10rem;
+  font-size: 3rem;
+  color: red;
+}
+
 /* #############  Navbar styling ####### */
 
 /* for Desktop Mode */
