--- a/ExpressProject/public/css/style.css
+++ b/ExpressProject/public/css/style.css
@@ -17,6 +17,12 @@ html {
   font-size: 62.5%;
 }
 
+body {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
 .row {
   margin: 0;
 }
@@ -28,7 +34,7 @@ html {
 .navbar {
   color: var(--white-color);
   background-color: var(--main-bg-color);
-  padding: 2rem 0;
+  padding: 1.5rem 0;
 }
 
 .fa-snowflake {
@@ -48,7 +54,7 @@ html {
 }
 
 .navbar li {
-  margin-left: 1rem;
+  margin-left: 1.5rem;
 }
 
 .navbar a {
@@ -59,3 +65,83 @@ html {
 .navbar a:hover {
   color: var(--main-color);
 }
+
+.navbar-toggler {
+  background-color: var(--white-color);
+}
+
+.navbar-toggler-icon {
+  color: var(--main-bg-color);
+}
+
+/* main_header start */
+.main_header_left,
+.main_header_right {
+  height: 60rem;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+}
+
+.main_header_left p {
+  font-size: 2rem;
+  margin: 0;
+}
+
+.main_header_left h2 {
+  font-size: 3rem;
+  margin: 1.2rem 0 2rem;
+}
+
+.main_header_left h2 span {
+  color: var(--main-color);
+  font-weight: 700;
+}
+
+.main_header_left .btn {
+  border: none;
+  outline: none;
+  border-radius: 2rem;
+  font-size: 1.6rem;
+  letter-spacing: 0.6px;
+  padding: 0.6rem 1.6rem;
+  text-transform: uppercase;
+  box-shadow: 0 8px 6px -6px #191907;
+}
+
+.carousel-item img {
+  border-radius: 1rem;
+  box-shadow: 0 8px 6px -6px #000;
+}
+
+.main_header_right figure img {
+  filter: drop-shadow(0 0.5rem 1rem rgba(0, 0, 0, 0.5));
+}
+/* main_header end */
+
+/* Footer code start */
+footer {
+  background-color: var(--main-bg-color);
+  width: 100%;
+  text-align: center;
+  color: var(--white-color);
+  margin-top: auto;
+}
+
+footer p {
+  font-size: 1.5rem;
+  margin: 0;
+  line-height: 4rem;
+}
+/* Footer code end */
+
+/* Responsive Code start */
+@media screen and (max-width: 768px) {
+  .main_header_left,
+  .main_header_right {
+    height: auto;
+    margin: 3rem 0;
+  }
+}
+/* Responsive Code end */
