finalize the app

--- a/ExpressProject/templates/views/index.hbs
+++ b/ExpressProject/templates/views/index.hbs
@@ -83,5 +83,7 @@
       </div>
     </div>
     <!-- Header area for home page end -->
-
-   {{>footer}}
+    {{>footer}}
+    <script src="../../public/js/main.js"></script>
+    </body>
+</html>
