--- a/ExpressProject/public/css/style.css
+++ b/ExpressProject/public/css/style.css
@@ -10,6 +10,7 @@
   --main-bg-color: #191907;
   --main-color: #00bf0f;
   --white-color: #fff;
+  --info-color: #2f4f04;
 }
 
 html {
@@ -118,7 +119,130 @@ body {
 .main_header_right figure img {
   filter: drop-shadow(0 0.5rem 1rem rgba(0, 0, 0, 0.5));
 }
+.error__img img {
+  width: 60rem;
+  height: 30rem;
+}
+
+.error__msg {
+  font-size: 2rem;
+  color: var(--main-color);
+}
 /* main_header end */
+
+/* Weather page start */
+.inp__form {
+  width: 80%;
+  position: relative;
+  margin: 5rem auto;
+}
+
+.inp__form input[type="text"] {
+  width: 100%;
+  padding: 2rem 5rem 2rem 2rem;
+  background-color: #1e202b;
+  color: var(--white-color);
+  outline: none;
+  border: none;
+  font-size: 1.5rem;
+  border-radius: 1rem;
+}
+
+::placeholder {
+  color: var(--white-color);
+}
+
+.inp__form input[type="submit"] {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  bottom: 5px;
+  border: none;
+  outline: none;
+  background-color: var(--main-color);
+  color: var(--white-color);
+  font-size: 1.6rem;
+  padding: 0 3rem;
+  border-radius: 1rem;
+  cursor: pointer;
+  text-transform: uppercase;
+  letter-spacing: 0.6px;
+}
+
+.inp__form input[type="submit"]:hover {
+  background-color: #05770e;
+}
+
+.tempInfo {
+  width: 50rem;
+  margin: auto;
+  min-height: 20rem;
+  background-color: var(--main-bg-color);
+  border-radius: 1rem;
+  padding: 1rem;
+}
+
+.top__layer {
+  width: 100%;
+  height: 10%;
+  background-color: var(--info-color);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 1rem;
+  padding: 1.5rem;
+}
+
+.top__layer p {
+  color: var(--white-color);
+  font-size: 1.5rem;
+  letter-spacing: 0.6px;
+  margin: 0;
+}
+
+.content__layer {
+  width: 100%;
+  height: 60%;
+  display: flex;
+  flex-direction: column;
+}
+
+#city__name {
+  padding: 2rem 0;
+  margin-left: 2rem;
+  color: var(--white-color);
+  font-size: 1.6rem;
+  font-weight: 400;
+}
+
+.middle__layer {
+  display: flex;
+  justify-content: space-around;
+  color: var(--white-color);
+  margin-top: 4rem;
+}
+
+.middle__layer p,
+.middle__layer .fa-solid {
+  font-size: 3rem;
+  font-weight: 900;
+}
+
+.middle__layer .fa-solid {
+  color: var(--main-color);
+}
+
+.middle__layer sup {
+  font-size: 5rem;
+  font-weight: 400;
+  margin-top: -2rem;
+}
+
+.hide_data {
+  visibility: hidden;
+  transition: all 0.3s linear;
+}
+/* Weather page end */
 
 /* Footer code start */
 footer {
