--- a/Nodejs_Udemy_course/express/views/add-product.html
+++ b/Nodejs_Udemy_course/express/views/add-product.html
@@ -5,11 +5,115 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Add-product</title>
+
+    <style>
+      * {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+        font-family: sans-serif;
+      }
+
+      main {
+        padding: 1.5rem;
+      }
+
+      .main-header {
+        width: 100%;
+        height: 3.5rem;
+        padding: 0 1.5rem;
+        background-color: #dbc441;
+      }
+
+      .main-header__nav {
+        height: 100%;
+        display: flex;
+        align-items: center;
+      }
+
+      .main-header__item-list {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        display: flex;
+      }
+
+      .main-header__item {
+        padding: 0;
+        margin: 0 1rem;
+      }
+
+      .main-header__item a {
+        text-decoration: none;
+        color: black;
+        font-size: 1.2rem;
+        font-weight: 500;
+        cursor: pointer;
+      }
+
+      .main-header__item a:hover,
+      .main-header__item a:active,
+      .main-header__item a.active {
+        color: #6200ff;
+      }
+
+      /* Form Styling */
+      .product-form {
+        width: 20rem;
+        max-width: 90%;
+        margin: auto;
+      }
+
+      .form-control label,
+      .form-control input {
+        display: block;
+        width: 100%;
+      }
+
+      .form-control input {
+        border: 1px solid #dbc441;
+        font: inherit;
+        border-radius: 2px;
+        margin: 5px 0;
+        padding: 5px 10px;
+      }
+
+      button {
+        border: 1px solid #dbc441;
+        color: #dbc441;
+        background-color: white;
+        font: inherit;
+        border-radius: 3px;
+        cursor: pointer;
+        padding: 4px;
+      }
+
+      button:hover,
+      button:active {
+        border-color: #6200ff;
+        color: #6200ff;
+      }
+    </style>
   </head>
   <body>
+    <header class="main-header">
+      <nav class="main-header__nav">
+        <ul class="main-header__item-list">
+          <li class="main-header__item">
+            <a href="/">Shop</a>
+          </li>
+          <li class="main-header__item">
+            <a class="active" href="/api/add-product">Add Product</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
     <main>
-      <form action="/api/product" method="POST">
-        <input type="text" name="title" id="title" />
+      <form class="product-form" action="/api/product" method="POST">
+        <div class="form-control">
+          <label for="title">Title</label>
+          <input type="text" name="title" id="title" />
+        </div>
         <button type="submit">Add Product</button>
       </form>
     </main>
