--- a/Nodejs_Udemy_course/express/views/shop.html
+++ b/Nodejs_Udemy_course/express/views/shop.html
@@ -5,13 +5,66 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shop</title>
+    <style>
+      * {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+        font-family: sans-serif;
+      }
+
+      main {
+        padding: 1.5rem;
+      }
+
+      .main-header {
+        width: 100%;
+        height: 3.5rem;
+        padding: 0 1.5rem;
+        background-color: #dbc441;
+      }
+
+      .main-header__nav {
+        height: 100%;
+        display: flex;
+        align-items: center;
+      }
+
+      .main-header__item-list {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        display: flex;
+      }
+
+      .main-header__item {
+        padding: 0;
+        margin: 0 1rem;
+      }
+
+      .main-header__item a {
+        text-decoration: none;
+        color: black;
+        font-size: 1.2rem;
+        font-weight: 500;
+        cursor: pointer;
+      }
+
+      .main-header__item a:hover,
+      .main-header__item a:active,
+      .main-header__item a.active {
+        color: #6200ff;
+      }
+    </style>
   </head>
   <body>
-    <header>
-      <nav>
-        <ul>
-          <li>
-            <a href="/">Shop</a>
+    <header class="main-header">
+      <nav class="main-header__nav">
+        <ul class="main-header__item-list">
+          <li class="main-header__item">
+            <a class="active" href="/">Shop</a>
+          </li>
+          <li class="main-header__item">
             <a href="/api/add-product">Add Product</a>
           </li>
         </ul>
