--- a/Nodejs_Udemy_course/express/views/error.html
+++ b/Nodejs_Udemy_course/express/views/error.html
@@ -5,64 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page not found</title>
-    <style>
-      * {
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-        font-family: sans-serif;
-      }
-
-      main {
-        padding: 1.5rem;
-      }
-
-      .main-header {
-        width: 100%;
-        height: 3.5rem;
-        padding: 0 1.5rem;
-        background-color: #dbc441;
-      }
-
-      .main-header__nav {
-        height: 100%;
-        display: flex;
-        align-items: center;
-      }
-
-      .main-header__item-list {
-        list-style: none;
-        padding: 0;
-        margin: 0;
-        display: flex;
-      }
-
-      .main-header__item {
-        padding: 0;
-        margin: 0 1rem;
-      }
-
-      .main-header__item a {
-        text-decoration: none;
-        color: black;
-        font-size: 1.2rem;
-        font-weight: 500;
-        cursor: pointer;
-      }
-
-      .main-header__item a:hover,
-      .main-header__item a:active,
-      .main-header__item a.active {
-        color: #6200ff;
-      }
-
-      .err-msg {
-        width: 100%;
-        max-width: 50%;
-        margin: 1rem auto;
-        color: red;
-      }
-    </style>
+    <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
     <header class="main-header">
