convert all HTML files to PUG template

--- a/Nodejs_Udemy_course/express/views/shop.pug
+++ b/Nodejs_Udemy_course/express/views/shop.pug
@@ -2,11 +2,11 @@ doctype html
 html(lang="en")
     head
         meta(charset="UTF-8")
-        meta(http-equiv="X-UA-Compatible", content="IE=edge")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title My Shop
-        link(rel="stylesheet", href="/css/main.css")
-        link(rel="stylesheet", href="/css/product.css")
+        meta(http-equiv="X-UA-Compatible" content="IE=edge")
+        meta(name="viewport" content="width=device-width, initial-scale=1.0")
+        title #{docTitle}
+        link(rel="stylesheet" href="/css/main.css")
+        //- link(rel="stylesheet" href="/css/product.css")
     body 
         header.main-header
             nav.main-header__nav
@@ -16,5 +16,18 @@ html(lang="en")
                     li.main-header__item
                         a(href='/api/add-product') Add Product
         main 
-            h1 My Products 
-            p List of all the products                
+            .grid
+            if prods.length > 0
+            each product in prods
+                article.card.product-item   
+                    header.card__header
+                        h1.product__title #{product.title}
+                    .card__image
+                        img(src="https://images.pexels.com/photos/11961823/pexels-photo-11961823.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt='pexels')
+                    .card__content
+                        h2.product__price  $19
+                        p.product__description A unique breakfast for you!
+                    .card__actions 
+                        button.btn Add to Cart
+            else   
+                h1.center No Products
