--- a/Nodejs_Udemy_course/express/public/css/main.css
+++ b/Nodejs_Udemy_course/express/public/css/main.css
@@ -1,19 +1,25 @@
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700");
+
 * {
+  box-sizing: border-box;
+}
+
+body {
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
-  font-family: sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 main {
-  padding: 1.5rem;
+  padding: 1rem;
+  margin: auto;
 }
 
 .main-header {
   width: 100%;
   height: 3.5rem;
+  background-color: #00695c;
   padding: 0 1.5rem;
-  background-color: #006b4b;
 }
 
 .main-header__nav {
@@ -24,33 +30,85 @@ main {
 
 .main-header__item-list {
   list-style: none;
-  padding: 0;
   margin: 0;
+  padding: 0;
   display: flex;
 }
 
 .main-header__item {
-  padding: 0;
   margin: 0 1rem;
+  padding: 0;
 }
 
 .main-header__item a {
   text-decoration: none;
   color: white;
-  font-size: 1.2rem;
-  font-weight: 500;
-  cursor: pointer;
 }
 
 .main-header__item a:hover,
 .main-header__item a:active,
 .main-header__item a.active {
-  color: #e5ff00;
+  color: #ffeb3b;
 }
 
-.err-msg {
+.grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: stretch;
+}
+
+.card {
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  border-radius: 5px;
+}
+
+.card__header,
+.card__content {
+  padding: 1rem;
+}
+
+.card__header h1,
+.card__content h1,
+.card__content h2,
+.card__content p {
+  margin: 0;
+}
+
+.card__image {
   width: 100%;
-  max-width: 50%;
-  margin: 1rem auto;
-  color: red;
+}
+
+.card__image img {
+  width: 100%;
+}
+
+.card__actions {
+  padding: 1rem;
+  text-align: center;
+}
+
+.card__actions button,
+.card__actions a {
+  margin: 0 0.25rem;
+}
+
+.btn {
+  font: inherit;
+  border: 1px solid #00695c;
+  color: #00695c;
+  background: white;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.btn:hover,
+.btn:active {
+  background-color: #00695c;
+  color: white;
+}
+
+.center {
+  text-align: center;
+  color: #00695c;
 }
