--- a/Nodejs_Udemy_course/express/views/add-product.hbs
+++ b/Nodejs_Udemy_course/express/views/add-product.hbs
@@ -1,4 +1,4 @@
-<html lang="en">
+{{!-- <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -19,15 +19,15 @@
           </li>
         </ul>
       </nav>
-    </header>
-    <main>
-      <form class="product-form" action="/api/product" method="POST">
-        <div class="form-control">
-          <label for="title">Title</label>
-          <input type="text" name="title" id="title" />
-        </div>
-        <button type="submit">Add Product</button>
-      </form>
-    </main>
-  </body>
-</html>
+    </header> --}}
+<main>
+  <form class="product-form" action="/api/product" method="POST">
+    <div class="form-control">
+      <label for="title">Title</label>
+      <input type="text" name="title" id="title" />
+    </div>
+    <button type="submit">Add Product</button>
+  </form>
+</main>
+{{! </body>
+</html> }}
