--- a/Nodejs_Udemy_course/express/views/layouts/main-layout.hbs
+++ b/Nodejs_Udemy_course/express/views/layouts/main-layout.hbs
@@ -1,24 +1,28 @@
-{{!-- <html lang="en">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{pageTitle}}</title>
     <link rel="stylesheet" href="/css/main.css" />
+    {{#if productCSS}}
+    <link rel="stylesheet" href="/css/product.css">
+    {{/if}}
   </head>
   <body>
     <header class="main-header">
       <nav class="main-header__nav">
         <ul class="main-header__item-list">
           <li class="main-header__item">
-            <a href="/">Shop</a>
+            <a class="{{#if activeShop}}active{{/if}}" href="/">Shop</a>
           </li>
           <li class="main-header__item">
-            <a href="/api/add-product">Add Product</a>
+             <a class="{{#if activeAddProduct}}active{{/if}}" href="/api/add-product">Add Product</a>
           </li>
         </ul>
       </nav>
-    </header> --}}
-<h1 class="center">PAGE NOT FOUND</h1>
-{{! </body>
-</html> }}
+    </header>
+    {{{body}}}
+    
+  </body>
+</html>
