--- a/Nodejs_Udemy_course/express/views/shop.hbs
+++ b/Nodejs_Udemy_course/express/views/shop.hbs
@@ -1,4 +1,4 @@
-<html lang="en">
+{{!-- <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -18,34 +18,34 @@
           </li>
         </ul>
       </nav>
-    </header>
-    <main>
-      {{#if hasProducts}}
-        <div class="grid">
-          {{#each prods}}
-            <article class="card product-item">
-              <header class="card__header">
-                <h1>My First Order</h1>
-              </header>
-              <div class="card__image">
-                <img
-                  src="https://images.pexels.com/photos/11961823/pexels-photo-11961823.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"
-                  alt="pexels"
-                />
-              </div>
-              <div class="card__content">
-                <h2 class="product__price">$12</h2>
-                <div class="product__description">A unique breakfast for you!</div>
-              </div>
-              <div class="card__actions">
-                <button class="btn">Add to Cart</button>
-              </div>
-            </article>
-          {{/each}}
-        </div>
-      {{else}}
-        <h1 class="center">No Product Found!!</h1>
-      {{/if}}
-    </main>
-  </body>
-</html>
+    </header> --}}
+<main>
+  {{#if hasProducts}}
+    <div class="grid">
+      {{#each prods}}
+        <article class="card product-item">
+          <header class="card__header">
+            <h1>{{this.title}}</h1>
+          </header>
+          <div class="card__image">
+            <img
+              src="https://images.pexels.com/photos/11961823/pexels-photo-11961823.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"
+              alt="pexels"
+            />
+          </div>
+          <div class="card__content">
+            <h2 class="product__price">$12</h2>
+            <div class="product__description">A unique breakfast for you!</div>
+          </div>
+          <div class="card__actions">
+            <button class="btn">Add to Cart</button>
+          </div>
+        </article>
+      {{/each}}
+    </div>
+  {{else}}
+    <h1 class="center">No Product Found!!</h1>
+  {{/if}}
+</main>
+{{! </body>
+</html> }}
