convert file structure into MVC

--- a/Nodejs_Udemy_course/express/views/includes/nav.ejs
+++ b/Nodejs_Udemy_course/express/views/includes/nav.ejs
@@ -8,8 +8,7 @@
         <a
           class="<%= path === '/admin/add-product' ? 'active' : '' %>"
           href="/api/add-product"
-          >Add Product</a
-        >
+          >Add Product</a>
       </li>
     </ul>
   </nav>
