--- a/Nodejs_Udemy_course/express/views/shop.ejs
+++ b/Nodejs_Udemy_course/express/views/shop.ejs
@@ -4,15 +4,16 @@
     <%- include('includes/nav'); %>
     <main>
       <% if (prods.length > 0) { %>
+        <h1 class="center">All Products</h1>
       <div class="grid">
-        <% for (let product of prods) { %>
+        <% for(let product of prods) { %>
         <article class="card product-item">
           <header class="card__header">
-            <h1><%= product.title %></h1>
+            <h1><%= product.title || "New Product"%></h1>
           </header>
           <div class="card__image">
             <img
-              src="https://images.pexels.com/photos/11961823/pexels-photo-11961823.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTbqa6TB1LIW9aYRgQPqZ5MjWDZS6p-vENLcw&usqp=CAU"
               alt="pexels"
             />
           </div>
