save data in files and fetch from file

--- a/Nodejs_Udemy_course/express/views/shop.ejs
+++ b/Nodejs_Udemy_course/express/views/shop.ejs
@@ -9,7 +9,7 @@
         <% for(let product of prods) { %>
         <article class="card product-item">
           <header class="card__header">
-            <h1><%= product.title || "New Product"%></h1>
+            <h1><%= product.title %></h1>
           </header>
           <div class="card__image">
             <img
