remove extra files and refactor some code

--- a/Nodejs_Udemy_course/express/views/shop/product-list.ejs
+++ b/Nodejs_Udemy_course/express/views/shop/product-list.ejs
@@ -1,7 +1,7 @@
-<%- include('includes/head'); %>
+<%- include('../includes/head'); %>
   </head>
   <body>
-    <%- include('includes/nav'); %>
+    <%- include('../includes/nav'); %>
     <main>
       <% if (prods.length > 0) { %>
         <h1 class="center">All Products</h1>
@@ -31,4 +31,4 @@
       <h1 class="center">No Product Found!!</h1>
       <% } %>
     </main>
-    <%- include('includes/end'); %>
+    <%- include('../includes/end'); %>
