set up the routes for all pages

--- a/Nodejs_Udemy_course/express/views/shop/index.ejs
+++ b/Nodejs_Udemy_course/express/views/shop/index.ejs
@@ -2,5 +2,5 @@
   </head>
   <body>
     <%- include('../includes/nav'); %>
-    <h1>Admin Porducts Page</h1>
+    <h1>Index Page</h1>
     <%- include('../includes/end'); %>
