--- a/Nodejs_Udemy_course/express/views/includes/nav.ejs
+++ b/Nodejs_Udemy_course/express/views/includes/nav.ejs
@@ -5,10 +5,26 @@
         <a class="<%= path === '/' ? 'active' : '' %>" href="/">Shop</a>
       </li>
       <li class="main-header__item">
+        <a class="<%= path === '/products' ? 'active' : '' %>" href="/products"
+          >Products</a
+        >
+      </li>
+      <li class="main-header__item">
+        <a class="<%= path === '/cart' ? 'active' : '' %>" href="/cart">Cart</a>
+      </li>
+      <li class="main-header__item">
         <a
-          class="<%= path === '/admin/add-product' ? 'active' : '' %>"
+          class="<%= path === '/add-product' ? 'active' : '' %>"
           href="/api/add-product"
-          >Add Product</a>
+          >Add Product</a
+        >
+      </li>
+      <li class="main-header__item">
+        <a
+          class="<%= path === '/admin/product' ? 'active' : '' %>"
+          href="/api/admin/product"
+          >Admin Products</a
+        >
       </li>
     </ul>
   </nav>
