--- a/Nodejs_Udemy_course/express/public/css/product.css
+++ b/Nodejs_Udemy_course/express/public/css/product.css
@@ -1,43 +1,27 @@
-/* Form Styling */
 .product-form {
   width: 20rem;
   max-width: 90%;
   margin: auto;
-}
-
-.form-control label,
-.form-control input,
-.form-control textarea {
   display: block;
-  width: 100%;
 }
 
-.form-control input,
-.form-control textarea {
-  border: 1px solid #006b4b;
-  font: inherit;
-  border-radius: 2px;
-  margin: 5px 0;
-  padding: 5px 10px;
+.product-item {
+  width: 20rem;
+  max-width: 95%;
+  margin: 1rem;
 }
 
-button {
-  border: 1px solid #006b4b;
-  color: #006b4b;
-  background-color: white;
-  font: inherit;
-  border-radius: 3px;
-  cursor: pointer;
-  padding: 4px;
-}
-.form-control input:focus,
-.form-control textarea:focus {
-  outline-color: #006b4b;
+.product__title {
+  font-size: 1.2rem;
+  text-align: center;
 }
 
-button:hover,
-button:active {
-  border-color: #006b4b;
-  background-color: #006b4b;
-  color: white;
+.product__price {
+  text-align: center;
+  color: #4d4d4d;
+  margin-bottom: 0.5rem;
+}
+
+.product__description {
+  text-align: center;
 }
