--- a/Nodejs_Udemy_course/express/views/shop/product-list.ejs
+++ b/Nodejs_Udemy_course/express/views/shop/product-list.ejs
@@ -4,7 +4,6 @@
     <%- include('../includes/nav'); %>
     <main>
       <% if (prods.length > 0) { %>
-        <h1 class="center">All Products</h1>
       <div class="grid">
         <% for(let product of prods) { %>
         <article class="card product-item">
@@ -22,6 +21,7 @@
             <div class="product__description"><%= product.description %></div>
           </div>
           <div class="card__actions">
+            <a href="/product/<%= product.id %>" class="btn"> Details</a>
             <button class="btn">Add to Cart</button>
           </div>
         </article>
