--- a/Nodejs_Udemy_course/express/views/shop/cart.ejs
+++ b/Nodejs_Udemy_course/express/views/shop/cart.ejs
@@ -2,5 +2,15 @@
   </head>
   <body>
     <%- include('../includes/nav'); %>
-    <h1>Cart Page</h1>
+    <main>
+      <% if(products.length > 0 ) { %>
+          <ul>
+            <% products.forEach(item => { %>
+              <li><%= item.productData.title %> (<%= item.qty %>)</li>
+              <% }) %>
+          </ul>
+        <% } else { %>
+          <h1>NO Product Found in CART!!</h1>
+          <% } %>
+    </main>
     <%- include('../includes/end'); %>
